--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "babel-preset-es2015": "^6.24.1",
+        "sweetalert2": "^11.4.17",
         "vue": "^3.2.37"
     }
 }
